package org.yyb.decorator.mycoffee;

public class Espresso extends Coffee {

    public Espresso() {
        setDes("意大利咖啡");
        setDes("6.0f");
    }
}
