package org.yyb.decorator.mycoffee;

public class LongBlack extends Coffee {

    public LongBlack() {
        setDes("美式咖啡");
        setPrice(5.0f);
    }
}
