package org.yyb.decorator.mycoffee;

public class ShortBlack extends Coffee {

    public ShortBlack() {
        setDes("shortblack");
        setPrice(4.0f);
    }
}
